tests/vertical-slice/reject/vec_index_unsupported_elem.hew
// vec-generic-index negative: scalar `xs[i]` on `Vec<isize>` is fail-closed.
//
// Platform-sized element widths still depend on target-width threading that is
// not available at MIR dispatch. The HIR element-type gate rejects them at
// compile time (E_HIR VecIndexElementTypeUnsupported) rather than letting MIR
// emit `NotYetImplemented` deep in lowering. Fixed-width scalars and string are
// accepted; this fixture pins the remaining fail-closed surface.
fn pick(xs: Vec<isize>, i: i64) -> isize {
    xs[i]
}

fn main() -> i64 {
    0
}
